cmake_minimum_required(VERSION 3.14)
project(ejercicios_pc1)

set(CMAKE_CXX_STANDARD 17)

add_executable(ejercicios_pc1 palabra_invertida.cpp)
add_executable(ejercicios_pc1a numeros_primos.cpp)
add_executable(ejercicios_pc1b numero3_5_7.cpp)
add_executable(ejercicios_pc1c piramide_asteriscos.cpp)
add_executable(ejercicios_pc1d MCD_euclides.cpp)
add_executable(ejercicios_pc1e esta_doble.cpp)
add_executable(ejercicios_pc1f contar_vocales.cpp)
add_executable(ejercicios_pc1g numero_binario.cpp)
add_executable(ejercicios_pc1h numero_armonico.cpp)
add_executable(ejercicios_pc1i MCD.cpp)
add_executable(ejercicios_pc1j sumadigitos.cpp)
add_executable(ejercicios_pc1k fecha.cpp)
add_executable(ejercicios_pc1l doble_digito.cpp)