cmake_minimum_required(VERSION 3.14)
project(ejercicios_pc1)

set(CMAKE_CXX_STANDARD 17)

add_executable(session5b main.cpp)
add_executable(session5b_e1 ejercicio1.cpp)
add_executable(session5b_e2 ejercicio2.cpp)
add_executable(session5b_e3 ejercicio3.cpp)
add_executable(session5b_e4 ejercicio4.cpp)
add_executable(session5b_e5 ejercicio5.cpp)
add_executable(session5b_e6 ejercicio6.cpp)